# native-res

./: .gitignore  README.md  pyproject.toml  renovate.json
.github/scripts/: resolve_package.py
.github/workflows/: lint.yml  pypipublish.yml
scripts/: generate_svg.py
src/native_res/: __init__.py  constants.py  funcs.py  kernels.py  plotting.py
src/native_res/cli/: __init__.py  components.py  helpers.py
src/nativeres/: funcs.py  plotting.py
src/nativeres/cli/: components.py  helpers.py
src/plugin/: README.md  main.py  pyproject.toml
src/plugin/src/vsview_nativeres/: __init__.py  components.py  main.py  plotting.py  settings.py  utils.py
stubs/vapoursynth/: __init__.pyi
