[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "nativeres"
description = "Descale analysis tools for VapourSynth"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Vardë", email = "ichunjo.le.terrible@gmail.com" }]
maintainers = [{ name = "Vardë", email = "ichunjo.le.terrible@gmail.com" }]
keywords = [
    "video",
    "video-processing",
    "encoding",
    "vapoursynth",
    "native",
    "resolution",
]
classifiers = [
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "jetpytools",
    "vsjetengine>=1.2.0",
    "vsjetpack>=1.3.0",
    "typer>=0.24.0",
    "rich",
    "pyside6>=6.10.1",
    "numpy>=2.0.0",
    "scipy>=1.16.0",
]
dynamic = ["version"]

[project.scripts]
nativeres = "nativeres.cli:app"

[project.urls]
"Documentation" = "https://github.com/Jaded-Encoding-Thaumaturgy/nativeres/blob/master/README.md"
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/nativeres"
"Bug Tracker" = "https://github.com/Jaded-Encoding-Thaumaturgy/nativeres/issues"
"Contact" = "https://discord.gg/XTpc6Fa9eB"

[project.optional-dependencies]
plugin = ["vsview-nativeres"]

[dependency-groups]
dev = [
    "lazydocs>=0.4.8",
    "mypy>=1.19.0, <1.20.0",
    "pydocstyle>=6.3.0",
    "ruff>=0.15.0, <0.16.0",
    "scipy-stubs>=1.16.0.0",
    "vsstubs>=1.0.2; python_version>='3.13'",
]

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
match = ["nativeres/v*"]
default-tag = "nativeres/v0.0.0"

[tool.versioningit.tag2version]
rmprefix = "nativeres/v"

[tool.uv.workspace]
members = ["src/plugin"]

[tool.uv.sources]
vsview-nativeres = { workspace = true }

[tool.hatch.build.targets.sdist]
only-include = ["src/nativeres", "scripts", "stubs"]

[tool.hatch.build.targets.wheel]
packages = ["src/nativeres"]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

exclude_gitignore = true

# Flags changed by --strict
warn_return_any = false
extra_checks = false

# Misc
warn_unreachable = true

allow_redefinition_new = true
local_partial_types = true
implicit_reexport = false
strict = true

show_column_numbers = true
pretty = true
color_output = true
error_summary = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "E",
    "C4",
    "I",
    "PYI",
    "Q",
    "SIM",
    "N",
    "W",
    "UP",
    "FURB",
    "RUF",
]
ignore = ["N802", "N815"]

[tool.ruff.lint.per-file-ignores]
"__init__.*" = ["F401", "F403"]
