[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "vsview-nativeres"
description = "A vsview plugin for analyzing and determining the native resolution of video content"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Vardë", email = "ichunjo.le.terrible@gmail.com" }]
maintainers = [{ name = "Vardë", email = "ichunjo.le.terrible@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = ["vsview>=0.1.0b5", "nativeres"]
dynamic = ["version"]

[project.entry-points.vsview]
vsview_nativeres = "vsview_nativeres"

[project.urls]
"Documentation" = "https://github.com/Jaded-Encoding-Thaumaturgy/nativeres/blob/master/src/plugin/README.md"
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/nativeres/tree/master/src/plugin"
"Bug Tracker" = "https://github.com/Jaded-Encoding-Thaumaturgy/nativeres/issues"
"Contact" = "https://discord.gg/XTpc6Fa9eB"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
match = ["vsview-nativeres/v*"]
default-tag = "vsview-nativeres/v0.0.0"

[tool.versioningit.tag2version]
rmprefix = "vsview-nativeres/v"

[tool.hatch.build.targets.wheel]
packages = ["src/vsview_nativeres"]

[tool.uv.sources]
nativeres = { workspace = true }
